# sqlt

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  OUT-OF-SCOPE.md  README.md
.github/workflows/: ci.yml
Formula/: sqlt.rb
man/: sqlt.1
src/: ast.rs  encoding.rs  error.rs  lib.rs  main.rs
src/cli/: build_schema.rs  emit.rs  examples.rs  lint.rs  man.rs  mod.rs  parse.rs  style.rs  translate.rs
src/dialect/: caps.rs  mariadb.rs  mod.rs
src/emit/: default.rs  mod.rs
src/json/: envelope.rs  mod.rs
src/lint/: ctx.rs  diagnostic.rs  mod.rs  registry.rs  rule.rs  schema.rs  walk.rs
src/lint/format/: json.rs  mod.rs  pretty.rs  sarif.rs  text.rs
src/lint/rules/: correctness.rs  ddl.rs  dialect_xc.rs  joins.rs  mod.rs  perf.rs  pre_flight.rs  raw.rs  schema_aware.rs  style.rs  subquery.rs
src/parse/: mod.rs  split.rs
src/translate/: mod.rs  rewrite.rs  warn.rs
tests/: cli.rs  lint.rs  parse_fixtures.rs  roundtrip.rs  translate.rs
tests/fixtures/lint/SQLT0300/: comma.expected.txt  comma.sql
tests/fixtures/lint/SQLT0302/: natural.expected.txt  natural.sql
tests/fixtures/lint/SQLT0303/: no_on.expected.txt  no_on.sql
tests/fixtures/lint/SQLT0304/: tautology.expected.txt  tautology.sql
tests/fixtures/lint/SQLT0306/: full_outer_mysql.expected.txt  full_outer_mysql.sql
tests/fixtures/lint/SQLT0500/: simple.expected.txt
tests/fixtures/lint/SQLT0600/: equals_null.expected.txt  equals_null.sql
tests/fixtures/lint/SQLT0601/: no_where.expected.txt  no_where.sql
tests/fixtures/lint/SQLT0602/: no_where.expected.txt
tests/fixtures/mariadb/: insert.sql  package.sql  returning.sql  sequence.sql  system_versioning.sql
tests/fixtures/mssql/: select.sql  top.sql
tests/fixtures/mysql/: create_table.sql
tests/fixtures/postgres/: on_conflict.sql  select.sql
tests/fixtures/sqlite/: upsert.sql
tests/fixtures/translations/mariadb__mysql/: returning.expected.sql  returning.expected.warn
tests/fixtures/translations/mariadb__postgres/: returning.expected.sql  system_versioning.expected.sql  system_versioning.expected.warn
tests/fixtures/translations/postgres__mariadb/: returning.expected.sql
tests/snapshots/: lint__snapshot_json_select_star.snap  lint__snapshot_sarif_select_star.snap  lint__snapshot_text_select_star.snap
