[package]
name = "sqlt"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Multi-dialect SQL parser and translator (MySQL, MariaDB, PostgreSQL, MSSQL, SQLite)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thomasbjork/sqlt"

[[bin]]
name = "sqlt"
path = "src/main.rs"

[lib]
name = "sqlt"
path = "src/lib.rs"

[dependencies]
sqlparser = { version = "0.59", features = ["serde", "visitor"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
encoding_rs = "0.8"

[dev-dependencies]
insta = "1"
