[package]
name = "sqlt"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["codedeviate <codedv8@gmail.com>"]
description = "Multi-dialect SQL parser and translator (MySQL, MariaDB, PostgreSQL, MSSQL, SQLite)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/codedeviate/sqlt"
repository = "https://github.com/codedeviate/sqlt"
documentation = "https://docs.rs/sqlt"
keywords = ["sql", "parser", "translator", "dialect", "lint"]
categories = ["command-line-utilities", "database", "parser-implementations"]
exclude = [
    ".github/**",
    ".idea/**",
    "target/**",
    "Formula/**",
    "homebrew/",
    ".github/",
    "/.gitignore",
    "OUT-OF-SCOPE.md",
    "CLAUDE.md",
    "BREW.md",
]

[[bin]]
name = "sqlt"
path = "src/main.rs"

[lib]
name = "sqlt"
path = "src/lib.rs"

[dependencies]
sqlparser = { version = "0.59", features = ["serde", "visitor"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
encoding_rs = "0.8"

[dev-dependencies]
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
